kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orion-lms-service
  labels:
    app: orion-lms
spec:
  ports:
  - port: 80
    targetPort: 9090
    protocol: TCP
    name: http
  selector:
    app: orion-lms
  type: ClusterIP
